src/app/globals.css
:root {
  --black: #333438;
  --green: #37313b;
  --lightBlack: #808080;
  --green3: #aeff12;
  --green4: #31715d;
  --tan: #f2efe9;
  --tan2: #f5f3ee;
  --tanGlass: rgba(242, 236, 221, 0.7);
  --white: #fffdfb;
  --gray: #dfdddd;
  --gray2: #d7d0d0;
  --gray3: #93969e;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-decoration: none;
  line-height: 120%;
  font-family: var(--suisseReg);
  scroll-behavior: smooth;
  scroll-margin-top: 40px;
  overscroll-behavior: none;
  -webkit-tap-highlight-color: transparent;
}

html {
  font-size: 62.5%;
  height: 100%;
}

::-webkit-scrollbar {
  width: 0px;
  height: 0px;
  background: transparent;
}

body {
  font-size: 1.6rem;
}

a {
  color: inherit;
  text-decoration: none;
}

h1,
h2,
h3,
h4,
h5,
h6,
span {
  font-family: var(--suisse);
  color: var(--black);
  /* hyphens: auto; */
  text-transform: capitalize;
}

h1 {
  font-size: 8rem;
  line-height: 100%;
  font-weight: 500;
  line-height: 1;
  letter-spacing: -0.04em;
}

h2 {
  font-size: 8rem;
  line-height: 100%;
  font-weight: 500;
  line-height: 1;
  letter-spacing: -0.04em;
}

h3 {
  font-size: 2rem;
  line-height: 1em;
  font-weight: 500;
  letter-spacing: 0.01em;
}

h4 {
  font-size: 2rem;
  font-weight: 500;
  letter-spacing: -0.5px;
}

h5 {
  font-size: 2rem;
}

h6 {
  font-size: 1.8rem;
}

button {
  border: none;
  background-color: transparent;
  outline: none;
}

p,
input,
textarea {
  hyphens: auto;
  letter-spacing: -0.3px;
  margin-bottom: 0;
  color: var(--black);
  font-size: 1em;
  /* letter-spacing: 0.03em; */
}

input:focus,
textarea:focus {
  outline: none;
}

.toastFont {
  font-family: var(--interTight);
  font-weight: 700;
}

/* ::-webkit-scrollbar-thumb {
  border-radius: 20px;
  background: var(--secondary);
}

::-webkit-scrollbar-thumb:hover {
  background: var(--secondary);
}

::selection {
  background: var(--secondary);
}
::-moz-selection {
  background: var(--secondary);
} */

.span1 {
  font-size: 9.6rem;
  line-height: 100%;
  font-weight: 500;
  line-height: 1;
  letter-spacing: -0.04em;
  color: var(--gray3);
}

.h2v2 {
  font-size: 6.4rem;
  font-weight: 500;
  line-height: 1;
  letter-spacing: -0.04em;
}

.h2v3 {
  font-size: 8rem;
  font-weight: 500;
  line-height: 1;
  letter-spacing: -0.04em;
}

@media screen and (max-width: 768px) {
  /* html {
    font-size: 55%;
  } */

  /* p {
    font-size: 113.7%;
  } */

  h1,
  .span1,
  h2,
  .h2v2,
  .h2v3 {
    font-size: 5.5rem;
    letter-spacing: -0.02em;
  }
}

@media screen and (max-width: 568px) {
  /* html {
    font-size: 50%;
  } */

  h1,
  .span1,
  h2,
  .h2v2,
  .h2v3 {
    font-size: 4.5rem;
    letter-spacing: -0.02em;
  }

  /* h2 {
    font-size: 5.5rem;
  } */
  /* 
  p,
  label {
    font-size: 110%;
  } */
}

/* .toastFont {
} */

/* Only use in production */
@media screen and (max-width: 480px) {
  h1,
  h2 {
    letter-spacing: -3px;
  }

  h3 {
    letter-spacing: -2;
  }
}

